# chromiumctl

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  bootstrap.ps1  bootstrap.sh
docs/3-design/: architecture.md
docs/4-development/: developer-guide.md  developer_guide.md
docs/7-operations/compliance/: structural_audit_report_20260603_175045.json  structural_audit_report_20260603_181205.json  structural_audit_report_20260603_182406.json  structural_audit_report_20260603_182915.json  structural_audit_report_20260603_183420.json  structural_audit_report_20260603_183432.json  structural_audit_report_20260603_183609.json  structural_audit_report_20260603_183759.json  structural_audit_report_20260603_184002.json  structural_audit_report_20260603_184206.json  structural_audit_report_20260603_184210.json  structural_audit_report_20260603_184214.json
docs/rfcs/: RFC-0001-CLI.md  RFC-0002-shadow-dom-escaping-file-input-network-mock.md  RFC-0003-orphaned-process-recovery.md
scm/: Cargo.toml  README.md
scm/browsectl/: Cargo.toml
scm/browsectl/examples/launch/main/src/: main.rs
scm/browsectl/main/src/: client.rs  lib.rs
scm/browsectl/main/src/api/: js.rs  mod.rs
scm/browsectl/main/src/api/traits/: page_evaluator.rs
scm/browsectl/main/src/api/types/cdp/: cdp_client.rs
scm/browsectl/main/src/core/: client.rs  mod.rs
scm/browsectl/main/src/core/android/: adb_locator.rs  mod.rs
scm/browsectl/main/src/core/browser/: platform_browser_locator.rs
scm/browsectl/main/src/saf/: mod.rs
scm/browsectl/tests/: adb_locator_e2e_test.rs  browser_locator_e2e_test.rs  browser_session_e2e_test.rs  cdp_client_e2e_test.rs  client_e2e_test.rs  page_evaluator_e2e_test.rs  platform_browser_locator_e2e_test.rs  rect_e2e_test.rs  validator_e2e_test.rs
scm/browsectl/tests/src/: adb_locator_e2e_test.rs  browser_locator_e2e_test.rs  cdp_client_builder_e2e_test.rs  client_e2e_test.rs
scm/cdp-client/: Cargo.toml
scm/cdp-client/examples/launch/main/src/: main.rs
scm/cdp-client/main/src/: client.rs  lib.rs
scm/cdp-client/main/src/api/: js.rs
scm/cdp-client/main/src/api/traits/: page_evaluator.rs  validator.rs
scm/cdp-client/main/src/api/types/cdp/: cdp_client.rs
scm/cdp-client/tests/src/: adb_locator_e2e_test.rs  browser_locator_e2e_test.rs  browser_session_e2e_test.rs  cdp_client_builder_e2e_test.rs  cdp_client_e2e_test.rs  client_e2e_test.rs  page_evaluator_e2e_test.rs  platform_browser_locator_e2e_test.rs  rect_e2e_test.rs  validator_e2e_test.rs
scm/chromiumctl/: Cargo.toml
scm/chromiumctl/examples/: launch.rs
scm/chromiumctl/main/src/: client.rs  lib.rs
scm/chromiumctl/main/src/api/: mod.rs
scm/chromiumctl/main/src/api/browser/: platform_browser_locator.rs
scm/chromiumctl/main/src/api/traits/: page_evaluator.rs
scm/chromiumctl/main/src/api/types/cdp/: cdp_client.rs  cdp_client_builder.rs
scm/chromiumctl/main/src/core/spi/: mod.rs
scm/chromiumctl/test-support/src/: fake_adb.rs
scm/chromiumctl/tests/: adb_locator_e2e_test.rs  browser_locator_e2e_test.rs  browser_session_e2e_test.rs  cdp_client_builder_e2e_test.rs  cdp_client_e2e_test.rs  cli_e2e_test.rs  client_e2e_test.rs  platform_browser_locator_e2e_test.rs  validator_e2e_test.rs
scm/chromiumctl/tests/src/: cdp_client_builder_e2e_test.rs  cli_e2e_test.rs  page_evaluator_e2e_test.rs  validator_e2e_test.rs
scm/config/: deny.toml
src/: client.rs  evaluator.rs  lib.rs  rect.rs
src/api/: mod.rs
src/api/browser/: browser_locator.rs  mod.rs
src/api/spi/: browser_session.rs  mod.rs
src/api/traits/: mod.rs
src/api/types/: mod.rs  rect.rs
src/api/types/cdp/: mod.rs
src/core/: mod.rs
src/core/browser/: mod.rs  platform_browser_locator.rs
tests/: browser_locator_e2e_test.rs  browser_session_e2e_test.rs  cdp_client_builder_e2e_test.rs  client_e2e_test.rs  integration_test.rs  page_evaluator_e2e_test.rs  rect_e2e_test.rs
