[package]
name = "chromiumctl"
version = "0.1.0"
edition = "2021"
description = "Minimal Chromium DevTools Protocol client — launch, attach, evaluate JS, control viewport"
license = "MIT"
repository = "https://github.com/sweengineeringlabs/chromiumctl"
keywords = ["cdp", "chromium", "chrome", "headless", "devtools"]
categories = ["development-tools::testing", "web-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
