[package]
name = "chromiumctl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Minimal Chromium DevTools Protocol client — launch, attach, evaluate JS, control viewport"
keywords = ["cdp", "chromium", "chrome", "headless", "devtools"]
categories = ["development-tools::testing", "web-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "client"

[lib]
name = "chromiumctl"
path = "main/src/lib.rs"

[features]
# Enables CdpClient::attach_android, which shells out to `adb` to attach to a
# debuggable Android WebView. Off by default — the crate's core scope is
# desktop Chromium (Chrome/Edge/Brave/Arc/Vivaldi).
android = []

[[bin]]
name = "chromiumctl-cli"
path = "bin/chromiumctl-cli/main/src/main.rs"

[[example]]
name = "launch"
path = "examples/launch/main/src/main.rs"

[[bin]]
name = "fake-adb-for-tests"
path = "examples/fake-adb-for-tests/main/src/main.rs"
required-features = ["android"]

[[test]]
name = "adb_locator_e2e_test"
path = "tests/src/adb_locator_e2e_test.rs"

[[test]]
name = "browser_locator_e2e_test"
path = "tests/src/browser_locator_e2e_test.rs"

[[test]]
name = "browser_session_e2e_test"
path = "tests/src/browser_session_e2e_test.rs"

[[test]]
name = "cdp_client_builder_e2e_test"
path = "tests/src/cdp_client_builder_e2e_test.rs"

[[test]]
name = "cdp_client_e2e_test"
path = "tests/src/cdp_client_e2e_test.rs"

[[test]]
name = "cli_e2e_test"
path = "tests/src/cli_e2e_test.rs"

[[test]]
name = "client_e2e_test"
path = "tests/src/client_e2e_test.rs"

[[test]]
name = "page_evaluator_e2e_test"
path = "tests/src/page_evaluator_e2e_test.rs"

[[test]]
name = "platform_browser_locator_e2e_test"
path = "tests/src/platform_browser_locator_e2e_test.rs"

[[test]]
name = "rect_e2e_test"
path = "tests/src/rect_e2e_test.rs"

[[test]]
name = "validator_e2e_test"
path = "tests/src/validator_e2e_test.rs"

[dependencies]
serde.workspace      = true
serde_json.workspace = true
tungstenite.workspace = true
data-encoding.workspace = true

[dev-dependencies]
serde_json.workspace  = true
tungstenite.workspace = true

[lints.rust]
warnings = "deny"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
